fix translation and address

--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -29,6 +29,7 @@
   "contactTime": "Consultation Time",
   "contactPhone": "Whatsapp/Phone Number",
   "contactBtn": "Submit Form",
+  "contactAlt": "or contact us at ",
   "successBtn": "Message Sent!",
   "clientTtl": "Our Clients & Publications"
 }
