--- a/locales/id/common.json
+++ b/locales/id/common.json
@@ -29,6 +29,7 @@
   "contactTime": "Jam Konsultasi",
   "contactPhone": "Nomor Whatsapp",
   "contactBtn": "Kirim Form",
+  "contactAlt": "atau hubungi kami melalui ",
   "successBtn": "Pesan Terkirim!",
   "clientTtl": "KLIEN & PUBLIKASI"
 }
