fix nodemailer, ui changes

--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -1,24 +1,29 @@
 {
+  "navHome": "Home",
+  "navAbout": "About",
+  "navServices": "Services",
+  "navContact": "Contact us",
   "heroTag": "Your Solution to Legal Consultacy",
   "heroSub": "We provide simple solution for your complex problems.",
   "heroBtn": "GET STARTED",
   "aboutTtl": "ABOUT",
   "aboutTag": "We measures our success on your success",
-  "aboutSub": "WE ARE HERE FOR EVERY STEP OF THE WAY WITH YOU.",
   "aboutDesc": "SURAJA Law Offices is a Jakarta based law firm offering a full range of Indonesian legal services. At SURAJA, we focus on constantly delivering the highest quality legal services to meet our client’s needs. Each of our lawyers are equipped with profound knowledge and extensive experience in his/her fields of law. You may rest assured that your legal matters are handled by professionals with highest integrity and ethical standards. \n We committed to implement a nimble approach in each case and transaction which enables us to maneuver successfully through any curveball in all the cases and transactions.",
   "servicesTtl": "SERVICES",
   "servicesTag": "AREA OF",
   "servicesTag2": " EXPERTISE",
   "services1": "Banking and Finance",
-  "services2": "Capital markets",
-  "services3": "Corporate and M&A",
-  "services4": "Restructuring and Insolvency",
-  "services5": "Dispute Resolution",
-  "services6": "Labour and Employment Law",
-  "services7": "Mining and Natural Resources",
-  "services8": "Projects and Energy",
-  "services9": "Intellectual Property",
-  "services10": "Real Estate Law",
+  "services2": "Capital Markets",
+  "services3": "Corporate, Compliance & Services",
+  "services4": "Corporate M&A",
+  "services5": "Foreign Investment",
+  "services6": "Restructuring and Insolvency",
+  "services7": "Dispute Resolution",
+  "services8": "Labour and Employment",
+  "services9": "Mining and Natural Resources",
+  "services10": "Projects and Energy",
+  "services11": "Intellectual Property",
+  "services12": "Real Estate Law",
   "TBA": "SOON TO BE ANNOUNCED",
   "contactTtl": "CONTACT",
   "contactTag": "SCHEDULE",
@@ -31,5 +36,7 @@
   "contactBtn": "Submit Form",
   "contactAlt": "or contact us at ",
   "successBtn": "Message Sent!",
-  "clientTtl": "Our Clients & Publications"
+  "clientTtl": "Our Clients & Publications",
+  "toastOk": "Thankyou for contacting us!",
+  "toastFail": "Server error, please reach us manually."
 }
