--- a/locales/id/common.json
+++ b/locales/id/common.json
@@ -1,24 +1,29 @@
 {
+  "navHome": "Beranda",
+  "navAbout": "Tentang Kami",
+  "navServices": "Jasa",
+  "navContact": "Hubungi Kami",
   "heroTag": "Solusi Konsultasi Hukum Anda",
   "heroSub": "Kami menyediakan solusi sederhana untuk masalah kompleks anda.",
   "heroBtn": "HUBUNGI KAMI",
   "aboutTtl": "TENTANG KAMI",
   "aboutTag": "Kesuksesan kami diukur dari kesuksesan anda",
-  "aboutSub": "KAMI SIAP MENEMANI SETIAP LANGKAH ANDA",
   "aboutDesc": "SURAJA Law Offices adalah firma hukum yang berbasis di Jakarta yang menawarkan berbagai layanan hukum Indonesia. Di SURAJA, kami fokus untuk terus memberikan layanan hukum dengan kualitas terbaik untuk memenuhi kebutuhan klien kami. Setiap pengacara kami dilengkapi dengan pengetahuan yang mendalam dan pengalaman yang luas di bidang hukumnya. Anda dapat percaya degan tenang bahwa masalah hukum Anda ditangani oleh para profesional dengan integritas dan standar etika tertinggi. \n Kami berkomitmen untuk menerapkan pendekatan yang gesit dalam setiap kasus dan transaksi yang memungkinkan kami untuk bermanuver dengan sukses melalui bola kurva apa pun dalam semua kasus dan transaksi.",
-  "servicesTtl": "SERVIS",
+  "servicesTtl": "JASA",
   "servicesTag": "BIDANG",
   "servicesTag2": " KEAHLIAN",
   "services1": "Perbankan dan Keuangan",
   "services2": "Pasar Modal",
-  "services3": "Merger dan Akuisisi",
-  "services4": "Restrukturisasi dan Kepailitan",
-  "services5": "Dispute Resolution",
-  "services6": "Hukum Ketenagakerjaan",
-  "services7": "Pertambangan dan Sumber Daya Alam",
-  "services8": "Proyek dan Energi",
-  "services9": "Property Intelektual",
-  "services10": "Hukum Real Estate",
+  "services3": "Perusahaan, Kepatuhan & Layanan",
+  "services4": "Merger dan Akuisisi",
+  "services5": "Penanaman Modal Asing",
+  "services6": "Restrukturisasi dan Kepailitan",
+  "services7": "Penyelesaian Sengketa",
+  "services8": "Ketenagakerjaan",
+  "services9": "Pertambangan dan Sumber Daya Alam",
+  "services10": "Proyek dan Energi",
+  "services11": "Property Intelektual",
+  "services12": "Hukum Real Estate",
   "TBA": "SEGERA DI UMUMKAN",
   "contactTtl": "KONTAK KAMI",
   "contactTag": "PENJADWALAN",
@@ -31,5 +36,7 @@
   "contactBtn": "Kirim Form",
   "contactAlt": "atau hubungi kami melalui ",
   "successBtn": "Pesan Terkirim!",
-  "clientTtl": "KLIEN & PUBLIKASI"
+  "clientTtl": "KLIEN & PUBLIKASI",
+  "toastOk": "Terimakasih sudah menghubungi kami!",
+  "toastFail": "Pengiriman gagal, tolong hubungi kami secara manual."
 }
