--- a/locales/id/common.json
+++ b/locales/id/common.json
@@ -33,6 +33,9 @@
   "contactDate": "Tanggal Konsultasi",
   "contactTime": "Jam Konsultasi",
   "contactPhone": "Nomor Whatsapp",
+  "contactTopic": "Topik Konsultasi",
+  "topicList": "Perbankan dan Keuangan; Pasar Modal; Perusahaan, Kepatuhan & Layanan; Merger dan Akuisisi; Penanaman Modal Asing; Restrukturisasi dan Kepailitan; Penyelesaian Sengketa; Ketenagakerjaan; Pertambangan dan Sumber Daya Alam; Proyek dan Energi; Property Intelektual; Hukum Real Estate",
+  "contactMsg": "Deskripsi Singkat Permasalahan",
   "contactBtn": "Kirim Form",
   "contactAlt": "atau hubungi kami melalui ",
   "successBtn": "Pesan Terkirim!",
