update font, shadow

--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -4,7 +4,7 @@
   "navServices": "Services",
   "navContact": "Contact us",
   "heroTag": "Your Solution to Legal Consultacy",
-  "heroSub": "We provide simple solution for your complex problems.",
+  "heroSub": "We provide solution for your complex problems.",
   "heroBtn": "GET STARTED",
   "aboutTtl": "ABOUT",
   "aboutTag": "We measures our success on your success",
