--- a/locales/id/common.json
+++ b/locales/id/common.json
@@ -4,7 +4,7 @@
   "navServices": "Jasa",
   "navContact": "Hubungi Kami",
   "heroTag": "Solusi Konsultasi Hukum Anda",
-  "heroSub": "Kami menyediakan solusi sederhana untuk masalah kompleks anda.",
+  "heroSub": "Kami menyediakan solusi untuk masalah kompleks anda.",
   "heroBtn": "HUBUNGI KAMI",
   "aboutTtl": "TENTANG KAMI",
   "aboutTag": "Kesuksesan kami diukur dari kesuksesan anda",
