--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -3,7 +3,7 @@
   "navAbout": "About",
   "navServices": "Services",
   "navContact": "Contact us",
-  "heroTag": "Your Solution to Legal Consultacy",
+  "heroTag": "Your Solution to Legal Consultancy",
   "heroSub": "We provide solution for your complex problems.",
   "heroBtn": "GET STARTED",
   "aboutTtl": "ABOUT",
