fix href, font size

--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -39,7 +39,7 @@
   "contactBtn": "Submit Form",
   "contactAlt": "or contact us at ",
   "successBtn": "Message Sent!",
-  "clientTtl": "Our Clients & Publications",
+  "clientTtl": "OUR CLIENTS & PUBLICATIONS",
   "toastOk": "Thankyou for contacting us!",
   "toastFail": "Server error, please reach us manually."
 }
